   and apply a model's default textures; easier than gl.Texture("$%...")

 - new Spring.GetUICommands function to obtain a list of all UI commands (e.g. /luaui reload)
 - new VFS.CalculateHash function that calculates hash (in base64 form) of a given string (with md5 support initially)
 - new Spring.SetFeatureFade(featureID, bool) to control whether a feature will fade or not when zoomed out.

 - add callouts (see their Unit equivalents for documentation)
     Spring.{Get,Set}FeatureRotation
     Spring.{Get,Set}FeaturePieceCollisionVolumeData
     Spring.GetFeatureLastAttackedPiece
     Spring.GetFeaturePieceMap
     Spring.GetFeaturePieceList
     Spring.GetFeaturePieceInfo
     Spring.GetFeaturePiecePosition
     Spring.GetFeaturePieceDirection
     Spring.GetFeaturePiecePosDir
     Spring.GetFeaturePieceMatrix

     Spring.SetFeatureNoDraw
     Spring.GetFeatureNoDraw

     gl.FeatureRaw
     gl.FeatureMultMatrix
     gl.FeaturePiece
     gl.FeaturePieceMatrix
     gl.FeaturePieceMultMatrix

 - add Spring.FeatureRendering API; allows custom shaders (technically,
   materials) for features as its Spring.UnitRendering counterpart does
   for units
   note: the following two functions exist but are no-ops
     Spring.UnitRendering.SetFeatureLuaDraw
     Spring.FeatureRendering.SetUnitLuaDraw

 - add unsynced callout SetSkyBoxTexture(string texName) -> nil
   example usage: Spring.SetSkyBoxTexture("myskybox.dds")

 - add unsynced callout SetSunLighting(table params) -> nil
   It can be used to modify the following sun lighting parameters:
   {ground,unit}{Ambient,Sun,Specular}Color and specularExponent
   example usage: Spring.SetSunLighting({
    groundAmbientColor = {1, 0.1, 1},
    groundSunColor     = {1, 0.1, 1},
   })

 - add unsynced callout Spring.SetMapShadingTexture(string texType, string texName) -> boolean
   example usage: Spring.SetMapShadingTexture("$ssmf_specular", "name_of_my_shiny_texture")

 - add unsynced callout Spring.SetMapShader(